--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ h1,
   margin: 0;
   color: #3b3d66;
   font-size: 48px;
-  font-weight: bold;
+  font-weight: normal;
+  letter-spacing: 1px;
   line-height: 52px;
   text-transform: uppercase;
 }
